Removes the use_temp_dir arg, turns into a USE_TEMP_DIR arg (default False for STDIO) - also improves example in the example sse client

--- a/app.json
+++ b/app.json
@@ -15,6 +15,10 @@
         "STDIO_MODE_ONLY": {
             "description": "Only allow tool requests via STDIO mode?",
             "value": "false"
+        },
+        "USE_TEMP_DIR": {
+           "description": "Use a temporary working directory for code execution and npm installs.",
+            "value": "false"
         }
     },
     "formation": [
